<resources>
    <string name="app_name">cmu_fitnessapp_g20</string>
    <string name="logo_description">app_logo</string>
    <string name="menu_home">Home Page</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_logout">Sign-Out</string>
    <string name="register_subtitle">Fill in the following fields</string>
    <string name="login_subtitle">Sign in with your credentials</string>
    <string name="name_label">Name</string>
    <string name="name_hint">Enter name</string>
    <string name="email_label">Email</string>
    <string name="email_hint">Enter email</string>
    <string name="password_label">Password</string>
    <string name="password_hint">Enter password</string>
    <string name="create_btn">Create Account</string>
    <string name="login_btn">Login</string>
    <string name="message_details">Already have an account? Sign in</string>
    <string name="description"></string>
    <string name="exercise_manual">Stretch</string>
    <string name="exercise_automatic">Free Run</string>
    <string name="button_stop_tracking_manual">Stop</string>
    <string name="button_go_tracking_manual">Start stretching!</string>
    <string name="humidity_label">Humidity:</string>
    <string name="stop_chrono">Stop</string>
    <string name="total"></string>
    <string name="search_map">Search Route</string>
    <string name="area">Your Area</string>
    <string name="profile">Your Profile</string>
    <string name="training">Start Training</string>
    <string name="history">Training History</string>
    <string name="community_favs">Community Favourites</string>
    <string name="stretch_msg">Start stretching!</string>
    <string name="total_steps">Total steps:</string>
    <string name="exercice_msg">Train</string>
    <string name="time">30 sec</string>
    <string name="manual_ex_title">STRETCHES</string>
    <string name="automatic_ex_title">JOGGING</string>
    <string name="automatic_training">Start running!</string>
    <string name="time_label">Time :</string>
    <string name="calories_label">Calories :</string>
    <string name="route_title">Route Details</string>
    <string name="distance">Distance:</string>
    <string name="travel_time">Travel Time:</string>
    <string name="follow_btn">Follow</string>
    <string name="notification_name">Favourites</string>
    <string name="notification_title">Place Added</string>
    <string name="notification_content">You added a place to your favourites !</string>
    <string name="calories_burned">Total Calories Burned:</string>
    <string name="level">Level:</string>
    <string name="toast_msg">gyms near me</string>
</resources>