<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    tools:context=".fragments.MainPageFragment" >

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="match_parent"
        android:layout_height="314dp"
        android:contentDescription="logo"
        android:src="@drawable/logo_cmu" />

    <TextView
        android:id="@+id/tvMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:text="@string/area"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:paddingVertical="10dp"
        android:text="@string/profile" />

    <Button
        android:id="@+id/train"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:text="@string/training"
        android:backgroundTint="@color/colorPrimary"/>

    <Button
        android:id="@+id/history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:text="@string/history"
        android:backgroundTint="@color/colorPrimary"/>

    <Button
        android:id="@+id/favPlaces"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/community_favs"
        android:backgroundTint="@color/colorPrimary"/>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/favouritesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_marginBottom="16dp"
            app:tint="#fff"
            android:backgroundTint="@color/colorPrimary"
            android:contentDescription="Favoritos"
            app:srcCompat="@drawable/ic_baseline_favorite_24"
            tools:ignore="ImageContrastCheck" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</LinearLayout>