<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imageViewEx"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_weight="1"
        app:srcCompat="@drawable/alongar" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nameExText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/exercise_manual"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/categoryText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/time"/>
    </LinearLayout>

    <Button
        android:id="@+id/buttonPractise"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:text="@string/exercice_msg"
        android:backgroundTint="@color/colorPrimary"
        android:textStyle="bold"
        android:textColor="@color/white"/>
</LinearLayout>